add solve of count Ip Addresses

--- a/Kata 5/index.html
+++ b/Kata 5/index.html
@@ -6,6 +6,6 @@
   <title>kata 5</title>
 </head>
 <body>
-  <script src="best travel.js"></script>
+  <script src="Count IP Addresses.js"></script>
 </body>
 </html>
