add X O solve game

--- a/Kata 5/index.html
+++ b/Kata 5/index.html
@@ -6,6 +6,6 @@
   <title>kata 5</title>
 </head>
 <body>
-  <script src="int32 to IPv4.js"></script>
+  <script src="Tic-Tac-Toe Checker.js"></script>
 </body>
 </html>
