solve the challange (is my friend cheating kata 5)

--- a/Kata 5/index.html
+++ b/Kata 5/index.html
@@ -6,6 +6,6 @@
   <title>kata 5</title>
 </head>
 <body>
-  <script src="Tic-Tac-Toe Checker.js"></script>
+  <script src="Is my friend cheating.js"></script>
 </body>
 </html>
