solve the challange (fibonacci memory chanllange) kata 5

--- a/Kata 5/index.html
+++ b/Kata 5/index.html
@@ -6,6 +6,6 @@
   <title>kata 5</title>
 </head>
 <body>
-  <script src="Is my friend cheating.js"></script>
+  <script src="Memoized Fibonacci.js"></script>
 </body>
 </html>
