--- a/Kata 5/index.html
+++ b/Kata 5/index.html
@@ -6,6 +6,6 @@
   <title>kata 5</title>
 </head>
 <body>
-  <script src="A Chain adding function.js"></script>
+  <script src="What's a Perfect Power anyway.js"></script>
 </body>
 </html>
