--- a/kata_4/index.html
+++ b/kata_4/index.html
@@ -6,6 +6,6 @@
   <title>kata 4</title>
 </head>
 <body>
-  <script src="Snail.js"></script>
+  <script src="humman Readable fomrat.js"></script>
 </body>
 </html>
