solve problem kata 4 get observed Pin by js

--- a/kata_4/index.html
+++ b/kata_4/index.html
@@ -6,6 +6,6 @@
   <title>kata 4</title>
 </head>
 <body>
-  <script src="Next bigger number with the same digits.js"></script>
+  <script src="The observed PIN.js"></script>
 </body>
 </html>
