kata 4 strip comments beggining

--- a/kata_4/index.html
+++ b/kata_4/index.html
@@ -6,6 +6,6 @@
   <title>kata 4</title>
 </head>
 <body>
-  <script src="The observed PIN.js"></script>
+  <script src="strip_comments.js"></script>
 </body>
 </html>
